Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,3 +17,22 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
+- task: TerraformTaskV3@3
+  inputs:
+    provider: 'azurerm'
+    command: 'init'
+    backendServiceArm: 'Azure subscription 1(03fe16f6-5506-4194-ad0a-207df1a24d75)'
+    backendAzureRmResourceGroupName: 'example-resources'
+    backendAzureRmStorageAccountName: 'kemsyssa'
+    backendAzureRmContainerName: 'examplecontainer'
+    backendAzureRmKey: 'T1uqDlCHALRaw4qopctrVn/QvYcaAv+65ofg3lswoCQV3dCkbuKb+xXHQLry+vXL5xfWHTpirJdm+AStTffScA=='
+- task: TerraformTaskV3@3
+  inputs:
+    provider: 'azurerm'
+    command: 'plan'
+    environmentServiceNameAzureRM: 'Azure subscription 1(03fe16f6-5506-4194-ad0a-207df1a24d75)'
+- task: TerraformTaskV3@3
+  inputs:
+    provider: 'azurerm'
+    command: 'apply'
+    environmentServiceNameAzureRM: 'Azure subscription 1(03fe16f6-5506-4194-ad0a-207df1a24d75)'
