--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,21 +2,17 @@
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
+stages:
+- stage: validate
+  jobs:
+    - job: validate
+      continueOnError: false
+      steps: 
 
-trigger:
-- master
-
-pool:
-  vmImage: ubuntu-latest
-
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+    - task: TerraformInstaller@0
+      inputs:
+        terraformVersion: '1.3.0'
+        
 - task: TerraformTaskV3@3
   inputs:
     provider: 'azurerm'
